# sacklite

./: .gitignore  Cargo.toml  README.md  config.template.yml
migrations/: 20230601234545_add_bio_to_user.up.sql  20230604230914_add_location_to_user.up.sql  20230607224118_add_pins_to_user.down.sql  20230729130241_create_slot.down.sql  20230729130241_create_slot.up.sql  20230902233217_make_resource_refs_nullable.down.sql  20230902233217_make_resource_refs_nullable.up.sql  20230903230314_make_slot_icon_not_nullable.down.sql  20230903230314_make_slot_icon_not_nullable.up.sql  20240115171710_add_target_slot_to_comments.down.sql  20240115171710_add_target_slot_to_comments.up.sql  20240115234758_add_cascading_deletion.down.sql  20240115234758_add_cascading_deletion.up.sql  20240120222957_add_favourite_slot.down.sql  20240120222957_add_favourite_slot.up.sql  20240128163408_add_queued_slots.down.sql  20240128163408_add_queued_slots.up.sql
migrations/2023-04-14-181403_create_user/: up.sql
migrations/2023-06-01-234545_add_bio_to_user/: down.sql
migrations/2023-06-04-230914_add_location_to_user/: down.sql
migrations/2023-06-05-142059_add_hashes_to_user/: down.sql  up.sql
migrations/2023-06-07-224118_add_pins_to_user/: up.sql
migrations/2023-06-08-212720_create_comments/: up.sql
migrations/2023-06-11-123129_add_limit_to_bio/: down.sql  up.sql
src/: digest.rs  main.rs  responder.rs  responders.rs
src/db/: actions.rs  mod.rs  models.rs  schema.rs
src/db/actions/: comment.rs  mod.rs  user.rs
src/endpoints/: autodiscover.rs  mod.rs
src/endpoints/gameserver/: auth.rs  client_config.rs  comment.rs  enter_level.rs  filter.rs  login.rs  message.rs  mod.rs  news.rs  publish.rs  relation.rs  resource.rs  search.rs  slot.rs  slot_search.rs  tags.rs  user.rs
src/extractors/: json.rs  mod.rs  xml.rs
src/middleware/: digest.rs  mod.rs  session.rs  session_hack.rs
src/types/: config.rs  game_version.rs  mod.rs  npticket.rs  platform.rs  pub_key_store.rs  resource.rs  resource_ref.rs  session_data.rs
src/utils/: db.rs  deserialize.rs  mod.rs  predicate.rs  resource.rs  serde.rs  ticket_read.rs  ticket_reader.rs
