[package]
name = "sacklite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3", default-features = false, features = ["macros", "compress-gzip"]}
actix-web-lab = "0.19"
actix-http = "3.3"
actix-session = { version = "0.7", features = ["redis-actor-session"] }
actix-xml = { path = "../actix-xml", default-features = false }
mime = "0.3"

diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "numeric"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
bigdecimal = "0.3"

# yes, i'm using an html template engine for xml :P
maud = "0.25"

log = "0.4"
env_logger = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

sha1 = "0.10"
openssl = "0.10"
hex = "0.4"
hex-literal = "0.4"
base64 = "0.21"

strum = "0.24"
strum_macros = "0.24"

byteorder = "1.4"

anyhow = "1.0"
thiserror = "1.0"

regex = "1.8"