[package]
name = "sacklite"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = { version = "4.3", default-features = false, features = ["macros", "compress-gzip"]}
actix-web-lab = "0.19"
actix-http = "3.3"
actix-session = { version = "0.7", features = ["redis-actor-session"] }
actix-xml = { git = "https://github.com/uhwot/actix-xml.git", rev = "0d9ce91a", default-features = false }
mime = "0.3"

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }

futures = "0.3"

# yes, i'm using an html template engine for xml :P
maud = "0.25"

log = "0.4"
env_logger = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde-inline-default = "0.1"

sha1 = "0.10"
openssl = "0.10"
hex-literal = "0.4"
base64 = "0.21"

strum = "0.25"
strum_macros = "0.25"

byteorder = "1.4"

anyhow = "1.0"

regex = "1.8"