[package]
name = "sacklite"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "query"] }
axum-serde = { version = "0.2.0", features = ["xml"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs", "limit", "compression-deflate"] }
tower-sessions = "0.10"
tower-sessions-redis-store = "0.10"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
mime = "0.3"
time = "0.3"

tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"

quick-xml = "0.31"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4"

futures = "0.3"

# yes, i'm using an html template engine for xml :P
maud = "0.26"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_with = { version = "3.3", features = ["hex"] }

sha1 = "0.10"
openssl = "0.10"
hex = "0.4"
hex-literal = "0.4"

strum = "0.25"
strum_macros = "0.25"

byteorder = "1.4"

anyhow = "1.0"

regex = "1.8"
url = { version = "2.5.0", features = ["serde"] }
